--- a/Rock Paper Scissors/index.html
+++ b/Rock Paper Scissors/index.html
@@ -4,11 +4,17 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="styles.css">
+	<script type="text/javascript" src="script.js" defer></script>
 	<title>Rock Paper Scissors</title>
 </head>
 <body>
-
-
-	<script type="text/javascript" src="script.js"></script>
+	<div class="container">
+		<div class="button-container">
+			<button data-key="rock">⛰️</button>
+			<button data-key="paper">🧻</button>
+			<button data-key="scissors">✂️</button>
+		</div>
+		<div class="output">Rock!! PaAper! ScissorzZ!</div>
+	</div>
 </body>
 </html>
