--- a/Tic-Tac-Toe/index.html
+++ b/Tic-Tac-Toe/index.html
@@ -26,13 +26,17 @@
 		  			<div>
 		  				<div class="fs-35 mx-10">Player 1</div>
 							<label for="player1_name">Name:</label>
-							<input type="text" id="player1_name" name="player1_name" class="btn-default border-bottom" required>
+							<input type="text" id="player1_name" name="player1_name" class="name-input btn-default border-bottom" required>
 		  			</div>
 		  			<div>
-		  				<div class="fs-35 mx-10">Player 2</div>
+		  				<div class="player2-name fs-35 mx-10">Player 2</div>
 							<label for="player2_name">Name:</label>
-							<input type="text" id="player2_name" name="player2_name" class="btn-default border-bottom" required>
+							<input type="text" id="player2_name" name="player2_name" class="name-input btn-default border-bottom" required>
 		  			</div>
+	  			</div>
+	  			<div>
+	  				<input type="checkbox" id="ai" name="ai" class="ai">
+	  				<label for="ai">Play against imaginary friend.</label>
 	  			</div>
 		  		<button type="submit" class="btn-start hover-cursor-pointer fs-35">START!</button>
 	  		</form>
