Implement add and remove todo items

--- a/Todo List/src/index.html
+++ b/Todo List/src/index.html
@@ -27,9 +27,12 @@
 	</div>
 
 	<div class="modal">
-	  <div class="modal-content">
-	    <p>Some text in the Modal..</p>
-	  </div>
+		<div class="modal-box">
+			<div class="modal-header fs-22 mb-20">Header</div>
+			<div class="modal-content"></div>
+			<button class="btn-ok mr-10 mt-20">Button</button>
+			<button class="btn-cancel mt-20">Cancel</button>
+		</div>
 	</div>
 </body>
 </html>
