--- a/Todo List/src/index.html
+++ b/Todo List/src/index.html
@@ -15,10 +15,13 @@
 			<span class="material-symbols-outlined position-absolute darkgrey-opac hover-cursor-pointer hover-darkgrey icon-add-todo">add_box</span>
 			<div class="flex justify-content-center align-items-center gap-2">
 				<div class="fs-22 darkgrey mb-10">Daily</div>
-				<span class="material-symbols-outlined fs-18 darkgrey-opac hover-cursor-pointer hover-darkgrey icon-edit-todobox">edit</span>
+				<span class="material-symbols-outlined fs-18 darkgrey-opac hover-cursor-pointer hover-darkgrey icon-delete-todobox">edit</span>
 			</div>
 			<!-- Add content here -->
 		</div>
+
+		<!-- Add boxes here -->
+		<div class="box-container"></div>
 
 		<div class="box text-align-center">
 			<span class="material-symbols-outlined icon-add-todobox hover-cursor-pointer fs-40">add</span>
